[gd_scene load_steps=5 format=3 uid="uid://b8hka0ej3d1ws"]

[ext_resource type="Script" path="res://battle/stats_arrows.gd" id="1_3qwgl"]
[ext_resource type="Texture2D" uid="uid://rjdvyjqyjd2o" path="res://assets/ui/battle/arrow_atk_down.png" id="2_toyda"]
[ext_resource type="Texture2D" uid="uid://mx7ja1vaxq67" path="res://assets/ui/battle/arrow_def_down.png" id="3_6qxl0"]
[ext_resource type="Texture2D" uid="uid://cjbblmc5abral" path="res://assets/ui/battle/arrow_spd_down.png" id="4_5ms2e"]

[node name="StatsArrows" type="Node2D"]
script = ExtResource("1_3qwgl")

[node name="ArrowContainer" type="HBoxContainer" parent="."]
layout_direction = 3
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_constants/separation = -1

[node name="AttackArrows" type="HBoxContainer" parent="ArrowContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = -3

[node name="Atk1" type="TextureRect" parent="ArrowContainer/AttackArrows"]
z_index = 4
layout_mode = 2
texture = ExtResource("2_toyda")
stretch_mode = 2

[node name="Atk2" type="TextureRect" parent="ArrowContainer/AttackArrows"]
z_index = 3
layout_mode = 2
texture = ExtResource("2_toyda")
stretch_mode = 2

[node name="Atk3" type="TextureRect" parent="ArrowContainer/AttackArrows"]
z_index = 2
layout_mode = 2
texture = ExtResource("2_toyda")
stretch_mode = 2

[node name="Atk4" type="TextureRect" parent="ArrowContainer/AttackArrows"]
z_index = 1
layout_mode = 2
texture = ExtResource("2_toyda")
stretch_mode = 2

[node name="DefenseArrows" type="HBoxContainer" parent="ArrowContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = -3

[node name="Def1" type="TextureRect" parent="ArrowContainer/DefenseArrows"]
z_index = 4
layout_mode = 2
texture = ExtResource("3_6qxl0")
stretch_mode = 2

[node name="Def2" type="TextureRect" parent="ArrowContainer/DefenseArrows"]
z_index = 3
layout_mode = 2
texture = ExtResource("3_6qxl0")
stretch_mode = 2

[node name="Def3" type="TextureRect" parent="ArrowContainer/DefenseArrows"]
z_index = 2
layout_mode = 2
texture = ExtResource("3_6qxl0")
stretch_mode = 2

[node name="Def4" type="TextureRect" parent="ArrowContainer/DefenseArrows"]
z_index = 1
layout_mode = 2
texture = ExtResource("3_6qxl0")
stretch_mode = 2

[node name="SpeedArrows" type="HBoxContainer" parent="ArrowContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = -3

[node name="Spd1" type="TextureRect" parent="ArrowContainer/SpeedArrows"]
z_index = 4
layout_mode = 2
texture = ExtResource("4_5ms2e")
stretch_mode = 2

[node name="Spd2" type="TextureRect" parent="ArrowContainer/SpeedArrows"]
z_index = 3
layout_mode = 2
texture = ExtResource("4_5ms2e")
stretch_mode = 2

[node name="Spd3" type="TextureRect" parent="ArrowContainer/SpeedArrows"]
z_index = 2
layout_mode = 2
texture = ExtResource("4_5ms2e")
stretch_mode = 2

[node name="Spd4" type="TextureRect" parent="ArrowContainer/SpeedArrows"]
z_index = 1
layout_mode = 2
texture = ExtResource("4_5ms2e")
stretch_mode = 2
